# SQR-project-S24

./: .flake8  .gitignore  .mutmut-cache  .prettierrc  README.md  bandit.yaml  code-coverage-results.md  coverage.xml  locustfile.py  mutmut_config.py  oneline.txt  pyproject.toml  run-ui-test.sh  test.txt
.github/workflows/: bandit-status.yml  converage-comment.yml  coverage-comment.yml  coverage-report.yml  deploy.yml  generate-badges.yml  main.yml  mutation-report.yml
deployments/: Dockerfile  deployment.yaml
src/: main.py
src/api/: __init__.py  setup.py
src/config/: __init__.py
src/db/: group.py  init.sql  split_history.py  sqlite.py  user.py
src/middleware/: __init__.py
src/model/: __init__.py  model.py
src/schema/: __init__.py
src/service/: group.py  passwords.py  user.py
src/static/: __init__.py
src/tests/db/: test_db_group.py  test_db_split_history.py  test_db_user.py
src/tests/integration/: test_base.py  test_integration.py
src/tests/service/: test_group.py  test_user.py
src/tests/ui/: package-lock.json  package.json  test_ui.py  tsconfig.json  utils.py
src/tests/ui/tests/: helpers.ts  test_ui.ts
static/: index.html
static-html/: login.html
static-js/: auth-utils.js  login.js  profile.js  register.js
static/css/: common.css  group.css  login.css  profile.css
static/html/: group.html  login.html  main.html  profile.html
static/js/: auth-utils.js  common.js  group.js  login.js  main.js  profile.js  register.js
