[tool.poetry]
name = "sqr-project"
version = "0.1.0"
description = ""
authors = ["Michael Dmitriev <m.dmitriev@innopolis.university>", "Andrew Sandimirov <a.sadimirov@innopolis.university>", "Timur Iakhshigulov <t.iakhshigulov@innopolis.university>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
jinja2 = "^3.1.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
