[tool.poetry]
name = "sqr-project"
version = "0.1.0"
description = ""
authors = ["Michael Dmitriev <m.dmitriev@innopolis.university>", "Andrew Sandimirov <a.sadimirov@innopolis.university>", "Timur Iakhshigulov <t.iakhshigulov@innopolis.university>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
jinja2 = "^3.1.3"
pyjwt = "^2.8.0"
starlette-context = "^0.3.6"
bcrypt = "^4.1.2"
requests = "^2.31.0"
gevent = "^24.2.1"
httpx = "^0.27.0"
pytest-asyncio = "^0.23.6"
mutmut = "^2.4.5"
bandit = "^1.7.8"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
flake8 = "^7.0.0"
pytest-mock = "^3.14.0"
coverage = "^7.5.0"
gevent = "^24.2.1"
locust = "^2.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
concurrency = ["thread", "greenlet"]
